--- a/src/style.css
+++ b/src/style.css
@@ -12,4 +12,13 @@ body {
   font-family: 'Helvetica','Arial', sans-serif;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body.no-scroll {
+  overflow: hidden;
 }
